# bcg

./: .gitignore  README.md  makefile  setup.py
bcg/: __init__.py  bcg_wrapper.pyx  eigen_sparse_wrapper.pxd  eigen_sparse_wrapper.pyx  ichol_wrapper.pyx
cpp/: CMakeLists.txt
cpp/include/: bcg.hpp  bcg_dense.hpp  bcg_output.hpp  bcg_sparse.hpp  dottable.hpp  eigen_sparse_wrapper.hpp  ichol.hpp  memory_util.hpp
cpp/src/: bcg.cpp  bcg_dense.cpp  bcg_sparse.cpp  dottable.cpp  eigen_sparse_wrapper.cpp  ichol.cpp
notebooks/: Demo.ipynb  sparse_matrix.mat
